--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="./tpFinal_arregloClick/index.html">Hola amor, hace click aca <3</a>
+    <a href="tpFinal_arregloClick/index.html">Hola amor, hace click aca <3</a>
 </body>
 </html>
